<resources>

    <!-- App Strings -->
    <string name="app_name">TeacherIMPACT</string>

    <!-- Strings related to actions -->

    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>

    <!-- Strings related to images -->
    <string name="images_teacher_impact_logo">Teacher Impact Logo</string>
    <string name="images_profile_default">Default Profile</string>
    <string name="images_icon_favorite">Favorite Icon</string>
    <string name="images_icon_endorse">Endorse Icon</string>
    <string name="images_icon_comment">Comment Icon</string>
    <string name="images_spacer">Spacer</string>
    <string name="userid"></string>

    <!-- Strings related to navigation drawer -->
    <string name="title_activity_base">BaseActivity</string>

    <string name="navigation_name">User Name</string>
    <string name="navigation_email">Email Address</string>

    <!-- Strings related to login -->
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_button">Sign In</string>
    <string name="login_button_signup"> Sign Up</string>
    <string name="login_register">Register</string>
    <string name="login_forgotPassword">Forgot Password</string>

    <!-- Strings related to register -->
    <string name="register_required">Information (Required)</string>
    <string name="register_as">Register As:</string>
    <string name="register_name">Full Name</string>
    <string name="register_email">Email Address</string>
    <string name="register_password">Password</string>
    <string name="register_birthday">Birthday</string>
    <string name="register_gender">Gender</string>
    <string name="register_zipcode">Zip Code</string>
    <string name="register_county">County</string>
    <string name="register_city">City</string>
    <string name="register_state">State</string>
    <string name="register_optional">Current Location (Optional)</string>
    <string name="register_button">Register</string>

    <!-- Strings related to profile -->
    <string name="profile_user_name">User Name</string>
    <string name="profile_user_info">User Info</string>
    <string name="profile_update_info">Update Profile</string>
    <string name="profile_info">Profile Information</string>
    <string name="profile_tp_label">Teaching Philosophy</string>
    <string name="profile_cb_label">Career Background</string>
    <string name="profile_xp_label">Experience</string>
    <string name="profile_skills_label">Skills</string>
    <string name="profile_cert_label">Certifications</string>
    <string name="profile_awards_label">Awards</string>
    <string name="profile_grade_label">Grade Level</string>
    <string name="profile_learning_strengths_label">Learning Strengths</string>
    <string name="profile_learning_weaknesses_label">Learning Weaknesses</string>
    <string name="profile_interests_label">Interests</string>
    <string name="profile_bio_label">Biography</string>

    <!-- Strings related to forgot password -->
    <string name="forgotpassword_button">Send Instructions</string>
    <string name="forgotpassword_email">Email Address</string>

    <!-- Strings related to about us section -->
    <string name="aboutus_button">About Us</string>
    <string name="teachers_button">Teachers</string>
    <string name="studentParent_button">Students &amp; Parents</string>

    <!-- Strings related to search -->
    <string name="search_filter1">All</string>
    <string name="search_filter2">Teachers</string>
    <string name="search_filter3">Parents</string>
    <string name="search_filter4">Students</string>
    <string name="search_filter5">Name</string>
    <string name="search_filter6">Email</string>
    <string name="search_filter7">Gender</string>
    <string name="search_filter8">Interests</string>
    <string name="search_filter9">Zip Code</string>
    <string name="search_filter10">County</string>
    <string name="search_filter11">City</string>
    <string name="search_filter12">State</string>
    <string name="title_activity_activity_select_image">ActivitySelectImage</string>
    <string name="title_activity_activity_other_users">ActivityOtherUsers</string>
    <string name="activity_home">Home</string>
    <string name="activity_goals_adder">New Goal</string>

    <!-- General UI Text -->
    <string name="save">Save</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- Drawer strings -->
    <string-array name="drawer_items">
        <item name="home">Home</item>
        <item name="profile">My Profile</item>
        <item anme="Favorite">Favorites</item>
        <item name="About">About</item>
        <item name="Settings">Logout</item>
    </string-array>

    <string name="profileOther">Profile</string>
    <string name="search">Search</string>

    <array name="icons">
        <item>@drawable/ic_action_home</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/favorite_enabled</item>
        <item>@drawable/ic_info</item>
    </array>
    <!-- Fragment Titles -->
    <string name="title_addgoal">Add New Goal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
