<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityRegister"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentGray"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/teacherimpact_logo_black"
            android:contentDescription="@string/images_teacher_impact_logo"
            android:id="@+id/register_imageLogo"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/colorPrimary" />

    </FrameLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_required"
                android:id="@+id/register_textRequired"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorAccentBlue" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/register_inputName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/register_name"
                android:textColor="@color/colorAccentGray" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/register_inputEmail"
                android:layout_gravity="center_horizontal"
                android:hint="@string/register_email"
                android:textColor="@color/colorAccentGray" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/register_inputPassword"
                android:layout_gravity="center_horizontal"
                android:hint="@string/register_password"
                android:textColor="@color/colorAccentGray" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/register_inputBirthday"
                android:layout_gravity="center"
                android:hint="Age" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Select Gender:"
                android:id="@+id/register_gender_label"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp" />

            <Spinner
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_inputGender"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_as"
                android:id="@+id/register_as_label"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorAccentBlue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please Select a Role Below"
                android:id="@+id/register_role_error_message"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:textColor="#ff0000"
                android:visibility="gone" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <RadioButton android:id="@+id/teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teacher"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton android:id="@+id/student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student"
                    android:onClick="onRadioButtonClicked" />

                <RadioButton android:id="@+id/parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Parent"
                    android:onClick="onRadioButtonClicked" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_info"
                android:id="@+id/register_profile_info_label"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorAccentBlue"
                android:visibility="gone" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/register_teachingphilosophy"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccentGray"
                android:hint="@string/profile_tp_label"
                android:inputType="textMultiLine"
                android:visibility="gone" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/register_background"
                android:layout_gravity="center_horizontal"
                android:hint="@string/profile_cb_label"
                android:textColor="@color/colorAccentGray"
                android:inputType="textMultiLine"
                android:visibility="gone" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/register_experience"
                android:layout_gravity="center_horizontal"
                android:hint="@string/profile_xp_label"
                android:textColor="@color/colorAccentGray"
                android:inputType="textMultiLine"
                android:visibility="gone" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/register_skills"
                android:layout_gravity="center_horizontal"
                android:hint="@string/profile_skills_label"
                android:textColor="@color/colorAccentGray"
                android:visibility="gone" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/register_certifications"
                android:layout_gravity="center_horizontal"
                android:hint="@string/profile_cert_label"
                android:textColor="@color/colorAccentGray"
                android:inputType="textMultiLine"
                android:visibility="gone" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/register_awards"
                android:layout_gravity="center_horizontal"
                android:hint="@string/profile_awards_label"
                android:textColor="@color/colorAccentGray"
                android:inputType="textMultiLine"
                android:visibility="gone" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Grade:"
                android:id="@+id/register_grade_label"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp"
                android:visibility="gone" />

            <Spinner
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_grade"
                android:visibility="gone"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/register_strengths"
                android:layout_gravity="center_horizontal"
                android:hint="@string/profile_learning_strengths_label"
                android:textColor="@color/colorAccentGray"
                android:visibility="gone" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/register_weaknesses"
                android:layout_gravity="center_horizontal"
                android:hint="@string/profile_learning_weaknesses_label"
                android:textColor="@color/colorAccentGray"
                android:visibility="gone" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/register_biography"
                android:layout_gravity="center_horizontal"
                android:hint="@string/profile_bio_label"
                android:textColor="@color/colorAccentGray"
                android:inputType="textMultiLine"
                android:visibility="gone" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/register_interests"
                android:layout_gravity="center_horizontal"
                android:hint="@string/profile_interests_label"
                android:textColor="@color/colorAccentGray"
                android:inputType="textMultiLine"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_optional"
                android:id="@+id/register_textOptional"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorAccentBlue" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/register_inputZipCode"
                android:layout_gravity="center_horizontal"
                android:hint="@string/register_zipcode"
                android:textColor="@color/colorAccentGray" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_inputCounty"
                android:layout_gravity="center_horizontal"
                android:hint="@string/register_county"
                android:textColor="@color/colorAccentGray"
                android:capitalize="words" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_inputCity"
                android:layout_gravity="center_horizontal"
                android:hint="@string/register_city"
                android:textColor="@color/colorAccentGray"
                android:capitalize="words" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/register_state"
                android:id="@+id/register_state_label"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp" />

            <Spinner
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/register_inputState"
                android:layout_gravity="center" />


            <Button
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:id="@+id/register_buttonRegister"
                android:background="@color/colorAccentBlue"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:textColor="@color/colorPrimary"
                android:onClick="register" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
